# MEM_Thesis_Reproduction

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_HANDOFF.md  README.md  _SESSION_HANDOFF.md  environment.yml  pyproject.toml
.githooks/: pre-commit
UMC/: README.md  README_UMC.md  _paths.py  pretrain.py  train_neu_ali.py  train_neu_avazu.py  train_neu_criteo.py  train_sta_ali.py  train_sta_avazu.py  train_sta_criteo.py
UMC/_legacy_runs/: README.md  autopilot_criteo_single_gpu.sh  quickstart_v9.sh  rerun_missing.py  run_criteo.py  run_v10_ablation2.py  run_v7.py  run_v7_supplement.py  run_v8_validation.py  run_v9_error_analysis.py
UMC/calib/: DeepEnsemShapeCalib.py  MonotonicNN.py  NeuralCalib.py  ParallelNeuralIntegral.py  SelfBoostCalibRank.py
UMC/dataset/: aliccp_process.ipynb  avazu_process.ipynb  download.txt
UMC/models/: deepfm.py  (+4 more)
data/: README.md
docs/: 01_paper_data_requirements.md  02_methodology.md  03_setup_guide.md  04_experiment_protocol.md  05_results_summary.md  06_paper_diff_audit.md  07_known_issues.md  08_rtx5090_optimization.md  09_local_ssh_workflow.md  README.md  RUNBOOK.md
reproduction/: __init__.py  _runner.py  orchestrator.py
scripts/: aggregate_results.sh  download_data.sh  generate_paper_artifacts.sh  health_check.sh  preprocess_data.sh  run_main_experiments.sh  run_pretrain.sh  run_v10_ablation.sh  run_v9_error_analysis.sh  setup_env.sh  smoke_test_rtx5090.sh  sync_to_local.sh
tests/: __init__.py  test_configs.py  test_diff_with_paper.py  test_metrics.py  test_orchestrator.py  test_path_param.py  test_tf32_drift.py  test_utils.py
(+83 files in other folders)
